--- a/src/main/res/layout/ssl_error_dialog.xml
+++ b/src/main/res/layout/ssl_error_dialog.xml
@@ -1,26 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/transparent"
+    android:clickable="true"
+    android:gravity="center">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/wrong_time_popup_title" />
+        android:layout_gravity="center"
+        android:background="@drawable/dl_connection_lost"
+        android:paddingBottom="15dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/wrong_time_popup_text" />
+        <ImageView
+            android:id="@+id/imgWarning"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/im_photo_error" />
 
-    <Button
-        android:id="@+id/button_date_settings"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/wrong_time_popup_button" />
+        <TextView
+            android:id="@+id/tvText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imgWarning"
+            android:gravity="center_horizontal"
+            android:paddingBottom="10dp"
+            android:text="@string/wrong_time_popup_text" />
 
-</LinearLayout>
+        <ProgressBar
+            android:id="@+id/prsSendingRequest"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imgWarning"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:id="@+id/btnOpenDateSettings"
+            style="@style/Widget.Topface.Button.Big.Blue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvText"
+            android:layout_centerHorizontal="true"
+            android:text="@string/wrong_time_popup_button" />
+    </RelativeLayout>
+</FrameLayout>
