#34825: установил отступы в EditText в 9-patch, езменил цвет шрифра в DropDown итемах, убрал тень прозрачного экшен бара в 2.3, выставил минимальный размер EditText 30dp

--- a/src/main/res/layout/layout_topface_signin.xml
+++ b/src/main/res/layout/layout_topface_signin.xml
@@ -86,7 +86,9 @@
                         android:hint="@string/password"
                         android:inputType="textPassword"
                         android:imeOptions="actionDone"
-                        android:paddingRight="24dp"/>
+                        android:paddingRight="24dp"
+                        android:paddingLeft="24dp" />
+
 
                     <ImageButton
                         android:id="@+id/ivShowPassword"
