--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -35,4 +35,8 @@
     <!-- avatar width and height in feeds -->
     <dimen name="list_avatar_size">70dp</dimen>
 
+    <dimen name="edit_text_min_height">30dp</dimen>
+
+    <dimen name="action_bar_size">48dp</dimen>
+
 </resources>
