--- a/src/main/res/layout/layout_topface_signin.xml
+++ b/src/main/res/layout/layout_topface_signin.xml
@@ -86,8 +86,7 @@
                         android:hint="@string/password"
                         android:inputType="textPassword"
                         android:imeOptions="actionDone"
-                        android:paddingRight="24dp"
-                        android:paddingLeft="24dp" />
+                        android:paddingRight="24dp" />
 
 
                     <ImageButton
