--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -364,6 +364,11 @@
         <item name="android:ellipsize">end</item>
         <item name="android:singleLine">true</item>
         <item name="android:maxWidth">104dp</item>
+        <item name="android:textColor">@color/list_text_black</item>
+    </style>
+
+    <style name="ListName.Ad">
+        <item name="android:maxWidth">@null</item>
     </style>
 
     <style name="ListAge">
