--- a/src/main/res/drawable/spinner_selector.xml
+++ b/src/main/res/drawable/spinner_selector.xml
@@ -3,5 +3,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/edit_form_selector_background_color_pressed_state" android:state_pressed="true" />
     <item android:drawable="@color/edit_form_selector_background_color_pressed_state" android:state_activated="true" />
+    <item android:drawable="@color/edit_form_selector_background_color_pressed_state" android:state_checked="true" />
     <item android:drawable="@color/edit_form_selector_background_color_release_state" />
 </selector>
