--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -301,7 +301,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">normal</item>
     </style>
-    
+
     <style name="AdIndicator">
         <item name="android:visibility">visible</item>
         <item name="android:src">@drawable/ic_ad_flag</item>
@@ -722,7 +722,7 @@
 
     // наследуются стили Widget
 
-    <style name="Widget.Topface"/>
+    <style name="Widget.Topface" />
 
     <style name="Widget.Topface.Button.Big.Gray" parent="Widget.Topface.Button.Big">
         <item name="android:background">@drawable/btn_gray_selector</item>
@@ -824,11 +824,6 @@
         <item name="android:background">@drawable/input_field_selector</item>
     </style>
 
-    <style name="FilterSpinnerDropDownList" parent="android:Widget.ListView.DropDown">
-        <item name="android:divider">@color/filter_fragment_divider_color</item>
-        <item name="android:dividerHeight">@dimen/filter_fragment_divider_height</item>
-    </style>
-
     <style name="FilterCheckBox" parent="topfaceCheckbox">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
@@ -877,17 +872,18 @@
 
     <style name="PopupMenuTextApearance" parent="@android:style/TextAppearance.Widget.IconMenu.Item">
         <item name="android:textColor">@drawable/top_menu_text_color</item>
-        <item name="android:textSize">16dp</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="PopupMenu" parent="@style/Widget.AppCompat.Base.PopupMenu">
-        <!--<item name="android:popupBackground">#F8F8F8</item>-->
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_example</item>
     </style>
 
-    <style name="PopupMenuListView" parent="@android:style/Widget.Holo.ListView.DropDown" tools:ignore="NewApi">
-        <item name="android:divider">@drawable/chat_date_line</item>
+    <style name="FilterSpinnerDropDownList" parent="android:Widget.ListView.DropDown">
+        <item name="android:divider">@color/filter_fragment_divider_color</item>
+        <item name="android:dividerHeight">@dimen/filter_fragment_divider_height</item>
         <item name="android:listSelector">@drawable/top_menu_list_selector</item>
+        <item name="android:background">@color/edit_form_selector_background_color_release_state
+        </item>
     </style>
-
 </resources>
