--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -872,7 +872,7 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="PopupMenu" parent="@style/Widget.AppCompat.Base.PopupMenu">
+    <style name="PopupMenu" parent="@style/Widget.AppCompat.PopupMenu">
         <item name="android:popupBackground">@drawable/menu_dropdown_panel_example</item>
     </style>
 
