--- a/src/main/res/layout/ssl_error_dialog.xml
+++ b/src/main/res/layout/ssl_error_dialog.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
+    android:background="#99000000"
     android:clickable="true"
     android:gravity="center">
 
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:background="@drawable/dl_connection_lost"
         android:paddingBottom="15dp"
         android:paddingLeft="15dp"
