--- a/src/main/res/values/constants.xml
+++ b/src/main/res/values/constants.xml
@@ -38,4 +38,9 @@
     <string-array name="ssl_handshake_exception_messages">
         <item>"could not validate certificate"</item>
     </string-array>
+
+    <!--show keyboard in chat, when screen height more than this value-->
+    <integer name="min_screen_height_chat_fragment">479</integer>
+
+
 </resources>
