#35151: Подарок в галерее сделн круглым, подарки правильно масштабируются, во вкладке "Подарки" подарки сделаны квадратными(для белого дизайна), добавлена возможность оспользования пост процессора во время загрузки изображений.

--- a/src/main/res/layout/control_photo_album.xml
+++ b/src/main/res/layout/control_photo_album.xml
@@ -7,7 +7,7 @@
 
     <com.topface.topface.ui.views.ImageViewRemote
         android:id="@+id/loGiftImage"
-        style="@style/Gift"
+        style="@style/AlbumGift"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="7dp"
