--- a/src/main/res/layout/dialog_delete_account.xml
+++ b/src/main/res/layout/dialog_delete_account.xml
@@ -8,7 +8,7 @@
 
 
     <com.topface.topface.ui.views.ImageViewRemote xmlns:ivr="http://schemas.android.com/apk/res/com.topface.topface"
-        ivr:postProcessor="mask"
+        ivr:preProcessor="mask"
         ivr:clipMask="@drawable/feed_photo_mask"
         android:background="@drawable/feed_photo_selector"
         android:id="@+id/ivAvatar"
