--- a/src/main/res/values/attrs.xml
+++ b/src/main/res/values/attrs.xml
@@ -19,6 +19,15 @@
             <flag name="roundCorners" value="2" />
             <flag name="mask" value="3" />
             <flag name="leftMenuClip" value="4" />
+            <flag name="squared" value="5" />
+        </attr>
+        <attr name="preProcessor">
+            <flag name="none" value="0" />
+            <flag name="rounded" value="1" />
+            <flag name="roundCorners" value="2" />
+            <flag name="mask" value="3" />
+            <flag name="leftMenuClip" value="4" />
+            <flag name="squared" value="5" />
         </attr>
     </declare-styleable>
 
