#34825: 1. Убрана тень под экшен баром 2. Фон в альбоме выставлен черный 3. В пункте вызова главного меню выставлены отступы 4. На экране выбора города курсор установлен по левой границе

--- a/src/main/res/layout/ac_city.xml
+++ b/src/main/res/layout/ac_city.xml
@@ -44,6 +44,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:inputType="text"
+        android:gravity="left"
         android:singleLine="true"/>
 
     <TextView
