#35656: added activity and photoblog fragment

--- a/src/main/res/values-land/dimens.xml
+++ b/src/main/res/values-land/dimens.xml
@@ -10,5 +10,8 @@
 
     <dimen name="action_bar_size">40dp</dimen>
 
+    <!--column count for screen "add to leader"-->
+    <integer name="add_to_leader_column_count">4</integer>
+
 
 </resources>
