--- a/src/main/res/layout/item_feed_part_avatar_photoblog.xml
+++ b/src/main/res/layout/item_feed_part_avatar_photoblog.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:foreground="@drawable/feed_avatar_overlay_selector"
-    android:layout_marginRight="10dp">
+    android:layout_marginRight="12dp"
+    android:foreground="@drawable/feed_avatar_overlay_selector">
 
     <com.topface.topface.ui.views.ImageViewRemote
         android:id="@+id/ifp_avatar_image"
-        style="@style/ListAvatar"/>
+        style="@style/ListAvatar" />
 </FrameLayout>
