--- a/src/main/res/layout/item_grid_loader_retrier.xml
+++ b/src/main/res/layout/item_grid_loader_retrier.xml
@@ -3,16 +3,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/gift_frame"
-        android:layout_centerInParent="true"/>
-
     <TextView
         android:id="@+id/tvLoaderText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="98dp"
+        android:layout_height="98dp"
         android:textColor="#FFFFFF"
         android:layout_centerInParent="true"
         android:text="@string/general_dialog_retry"/>
