#34825: Баг 1 в 9patch выставлены верные отступы для input чата Баг 15 Для кнопок сохранен 5.0 шрифт, в настройках кнопка выбора города заменена на TextView Баг 13 Цвет шрифта кнопки установить сервисы белый

--- a/src/main/res/layout/item_edit_profile_header.xml
+++ b/src/main/res/layout/item_edit_profile_header.xml
@@ -63,8 +63,8 @@
                 layout="@layout/item_edit_profile_name_select"
                 android:id="@+id/loProfileName" />
 
-            <Button
-                android:id="@+id/btnEditCity"
+            <TextView
+                android:id="@+id/tvEditCity"
                 style="@style/ItemTitleText"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
