--- a/src/main/res/layout/services_manager_layout.xml
+++ b/src/main/res/layout/services_manager_layout.xml
@@ -26,6 +26,7 @@
 
     <Button
         android:id="@+id/loButton"
+        style="@style/ButtonsText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
