--- a/src/main/res/layout/fragment_create_account.xml
+++ b/src/main/res/layout/fragment_create_account.xml
@@ -42,7 +42,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/email"
                         style="@style/EditTextAuth"
-                        android:background="@drawable/textlines"
+                        android:background="@drawable/input_registration_field"
                         android:imeOptions="actionNext"
                         android:inputType="textEmailAddress"/>
 
@@ -53,7 +53,7 @@
                         android:hint="@string/password"
                         style="@style/EditTextAuth"
                         android:imeOptions="actionNext"
-                        android:background="@drawable/textlines"
+                        android:background="@drawable/input_registration_field"
                         android:inputType="textPassword"/>
 
                     <EditText
@@ -63,7 +63,7 @@
                         android:hint="@string/edit_name"
                         android:imeOptions="actionNext"
                         style="@style/EditTextAuth"
-                        android:background="@drawable/textlines"/>
+                        android:background="@drawable/input_registration_field" />
 
                     <RelativeLayout
                         android:id="@+id/loBirthday"
