--- a/src/main/res/layout/ban.xml
+++ b/src/main/res/layout/ban.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@drawable/auth_bg">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="16dp">
 
-<LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_centerInParent="true"
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:gravity="center"
         android:orientation="vertical">
 
@@ -17,48 +18,38 @@
             android:id="@+id/ivBan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_ban"/>
+            android:src="@drawable/ic_ban" />
 
         <TextView
             android:id="@+id/banned_title"
-            android:layout_width="fill_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="10dip"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="35dp"
             android:gravity="center"
-            android:textSize="15sp"/>
+            android:textColor="@color/list_text_black"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/banned_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="24dp"
             android:gravity="center"
-            android:padding="15dip"/>
+            android:textColor="@color/list_text_black" />
 
-        <TextView
-            android:id="@+id/banned_timer"
+        <Button
+            android:id="@+id/btnFeedback"
+            style="@style/BanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="15dip"
-            android:text="@string/default_ban_time"/>
-
-        <Button
-            android:id="@+id/btnConfirm"
-            style="@style/Widget.Topface.Button.Big.Blue"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dip"
-            android:gravity="center"
-            android:visibility="gone"/>
-
-        <Button
-            android:id="@+id/btnCancel"
-            style="@style/Widget.Topface.Button.Big.Gray"
-            android:layout_width="220dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dip"
-            android:gravity="center"
-            android:visibility="gone"/>
+            android:layout_marginTop="24dp"
+            android:minHeight="40dp"
+            android:minWidth="224dp"
+            android:text="@string/ban_complain" />
     </LinearLayout>
 
     <TextView
@@ -68,12 +59,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="@string/settings_logout"
-        android:padding="12dp"
-        android:visibility="gone"/>
-
-    <FrameLayout
-        android:id="@+id/foreground_frame_layout"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"/>
+        android:textColor="@color/list_text_black"
+        android:textSize="14sp" />
 
 </RelativeLayout>
