--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -883,4 +883,10 @@
         <item name="android:background">@color/edit_form_selector_background_color_release_state
         </item>
     </style>
+
+    <style name="BanButton">
+        <item name="android:background">@drawable/ban_button_selector</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
+
 </resources>
