--- a/src/main/res/layout/item_left_menu_button_profile.xml
+++ b/src/main/res/layout/item_left_menu_button_profile.xml
@@ -17,7 +17,8 @@
             android:layout_width="fill_parent"
             android:layout_height="@dimen/left_menu_background_height"
             android:scaleType="centerCrop"
-            ivr:preProcessor="leftMenuClip" />
+            ivr:preProcessor="leftMenuClip"
+            ivr:postProcessor="none" />
 
         <ImageView
             android:layout_width="fill_parent"
@@ -42,7 +43,8 @@
                 android:src="@drawable/topface_male_profile_button"
                 android:tag="ivMenuAvatar"
                 ivr:clipMask="@drawable/frame_menu_mask"
-                ivr:preProcessor="mask" />
+                ivr:preProcessor="mask"
+                ivr:postProcessor="none" />
 
             <Button
                 android:id="@+id/btnUserName"
