--- a/src/main/res/layout/fragment_create_account.xml
+++ b/src/main/res/layout/fragment_create_account.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:fillViewport="true"
-            android:background="@drawable/auth_bg">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    android:background="@drawable/auth_bg">
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/authContainer"
-        >
+        android:id="@+id/authContainer">
 
         <LinearLayout
             android:id="@+id/loLoginGroup"
@@ -33,8 +32,7 @@
                     android:layout_width="210dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_registration_form_folder"
-                    android:orientation="vertical"
-                    >
+                    android:orientation="vertical">
 
                     <EditText
                         android:id="@+id/edEmail"
@@ -44,7 +42,7 @@
                         style="@style/EditTextAuth"
                         android:background="@drawable/input_registration_field"
                         android:imeOptions="actionNext"
-                        android:inputType="textEmailAddress"/>
+                        android:inputType="textEmailAddress" />
 
                     <EditText
                         android:id="@+id/edPassword"
@@ -54,7 +52,7 @@
                         style="@style/EditTextAuth"
                         android:imeOptions="actionNext"
                         android:background="@drawable/input_registration_field"
-                        android:inputType="textPassword"/>
+                        android:inputType="textPassword" />
 
                     <EditText
                         android:id="@+id/edName"
@@ -81,7 +79,7 @@
                             style="@style/EditTextAuth"
                             android:background="@android:color/transparent"
                             android:focusable="false"
-                            android:cursorVisible="false"/>
+                            android:cursorVisible="false" />
 
                         <ImageButton
                             android:id="@+id/ibBirthday"
@@ -91,7 +89,7 @@
                             android:layout_centerVertical="true"
                             android:padding="8dp"
                             android:src="@drawable/ic_dropdown"
-                            android:background="@android:color/transparent"/>
+                            android:background="@android:color/transparent" />
 
                     </RelativeLayout>
 
@@ -110,7 +108,7 @@
                             style="@style/EditTextAuth"
                             android:background="@android:color/transparent"
                             android:focusable="false"
-                            android:cursorVisible="false"/>
+                            android:cursorVisible="false" />
 
                         <EditText
                             android:id="@+id/tvBoy"
@@ -123,7 +121,7 @@
                             android:drawableLeft="@drawable/ic_sex_male"
                             android:background="@android:color/transparent"
                             android:focusable="false"
-                            android:cursorVisible="false"/>
+                            android:cursorVisible="false" />
 
                         <EditText
                             android:id="@+id/tvGirl"
@@ -135,7 +133,7 @@
                             style="@style/RegistrationSexTextView"
                             android:background="@android:color/transparent"
                             android:focusable="false"
-                            android:cursorVisible="false"/>
+                            android:cursorVisible="false" />
 
                     </RelativeLayout>
                 </LinearLayout>
@@ -152,7 +150,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:visibility="gone"
-                    style="@style/TopFaceProgressBar.Small"/>
+                    style="@style/TopFaceProgressBar.Small" />
 
                 <Button
                     android:id="@+id/btnRegister"
@@ -161,7 +159,7 @@
                     android:layout_centerInParent="true"
                     android:text="@string/start_communication"
                     android:background="@drawable/btn_signin_selector"
-                    style="@style/AuthButtonsText"/>
+                    style="@style/AuthButtonsText" />
             </RelativeLayout>
         </LinearLayout>
 
@@ -171,14 +169,14 @@
             style="@style/RedAlertTextView"
             android:background="@drawable/bg_alert_wrong_password"
             android:visibility="gone"
-            android:text="@string/error_login_password"/>
+            android:text="@string/error_login_password" />
 
         <TextView
             android:id="@+id/tvBackToMainAuth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/AuthBackButtonStyle"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginBottom="8dp" />
 
         <TextView
             android:id="@+id/tvWelcome"
@@ -188,7 +186,7 @@
             android:text="@string/welcome_to_topface"
             android:layout_centerHorizontal="true"
             android:layout_above="@id/loLoginGroup"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp" />
     </RelativeLayout>
 
 </ScrollView>
