--- a/src/main/res/layout/item_feed_layout_heart.xml
+++ b/src/main/res/layout/item_feed_layout_heart.xml
@@ -5,11 +5,11 @@
 
     <include
         android:id="@+id/ifp_avatar"
-        layout="@layout/item_feed_part_avatar"/>
+        layout="@layout/item_feed_part_avatar" />
 
     <include
         android:id="@+id/ifp_heart"
-        layout="@layout/item_feed_part_heart"/>
+        layout="@layout/item_feed_part_heart" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,13 +20,12 @@
         android:paddingBottom="1dp"
         android:orientation="vertical">
 
-        <include
-            layout="@layout/item_feed_part_name"/>
+        <include layout="@layout/item_feed_part_name" />
 
         <include
             android:id="@+id/ifp_text"
             layout="@layout/item_feed_part_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
