--- a/src/main/res/values/constants.xml
+++ b/src/main/res/values/constants.xml
@@ -28,6 +28,9 @@
     <dimen name="left_menu_background_height">124dp</dimen>
 
     <string name="appsflyer_dev_key">mDUXh3zNggkkNCAgvXASna</string>
+    <string name="appsflyer_first_pay">first_pay</string>
+    <string name="appsflyer_purchase">purchase</string>
+    <string name="appsflyer_registration">registration</string>
     <!-- С помощью этого флага определяем, планшет ли данное устройство см. ../values-sw600dp/constants.xml -->
     <bool name="is_tablet">false</bool>
 
