--- a/src/main/res/values/ads_integrations.xml
+++ b/src/main/res/values/ads_integrations.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ad_mob_banner_bottom_unit_id" translatable="false">ca-app-pub-9530442067223936/8256188006</string>
-    <!--<string name="ad_mob_banner_bottom_mediation_unit_id" translatable="false">ca-app-pub-5953340072072407/9867765371</string>-->
     <string name="ad_mob_banner_bottom_mediation_unit_id" translatable="false">ca-app-pub-9530442067223936/1609366403</string>
     <string name="adman_pad_id" translatable="false">654516d1b4df6917094de807156adc14</string>
     <integer name="adman_mediation_slot_id">6392</integer>
-    <integer name="adman_slot_id">5506</integer>
     <!--<integer name="adman_slot_id">6737</integer>-->
-    <string name="money_tapp_place_id" translatable="false">52c25f11–267e–4b12-9775-afe4a5ec3cff</string>
+    <integer name="smaato_publisher_id">1001000709</integer>
+    <integer name="smaato_space_id">130000663</integer>
+    <integer name="smaato_autoreload_time">60</integer>
+    <string name="mad_net_banner_space_id" translatable="false">31237</string>
+    <string name="mad_net_fullscreen_space_id" translatable="false">31238</string>
+    <string name="mad_net_fullscreen_label" translatable="false">madnet</string>
+    <string name="mad_net_banner_label" translatable="false">madnet</string>
 </resources>
