#34100: show overflow menu under button

--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -12,6 +12,7 @@
         <item name="android:itemTextAppearance">@style/PopupMenuTextApearance</item>
         <item name="android:dropDownListViewStyle">@style/FilterSpinnerDropDownList</item>
         <item name="android:popupMenuStyle" tools:ignore="NewApi">@style/PopupMenu</item>
+        <item name="actionOverflowMenuStyle">@style/OverflowDropDownMenu</item>
 
         <item name="android:windowTitleStyle">@style/CenterJustifyDialogTitle</item>
 
