--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -883,4 +883,14 @@
         <item name="android:background">@color/edit_form_selector_background_color_release_state
         </item>
     </style>
+
+    <style name="ProfileText">
+        <item name="android:textColor">@color/text_color_gray</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="FormTitleText">
+        <item name="android:textColor">@color/list_unread_counter_background</item>
+        <item name="android:textSize">13sp</item>
+    </style>
 </resources>
