--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <!-- new redesign colors -->
     <color name="bg_holo">#F1F1F1</color>
     <color name="bg_white">#FFFFFF</color>
-    <color name="bg_light_blue">#AEE5FD</color>
+    <color name="bg_light_blue">#EAF8FF</color>
     <color name="blue_60_percent">#99AEE5FD</color>
     <color name="text_color_gray">#333333</color>
 
